	  "short lived" open option which may improve performance with
	  small temporary files.
	- Updated book file format and added an appendix describing
	  the format.

    BUG FIXES

	- The web page output was not divided into chapters for
	  each input file.
	- The "make install" target did a clean.
	- The configure script would remove the image libraries
	  if you did not have FLTK installed.


CHANGES IN HTMLDOC v1.8.11

    NEW FEATURES

	- Added koi8-r character set.
	- Added new "TrueType" font option for PDF output. This
	  (hopefully) should improve support for non-latin
	  languages.
	- Added support for "justify" alignment; this is currently
	  implemented by adding additional space between characters
	  (no automatic hyphenation...)

    CHANGES

	- The "make install" target does a "make all" to ensure
	  that the software is built before installing it.  This
	  should help users that don't read the documentation
	  build the software.
	- Incorporated several OS/2 compile fixes from Alexander
	  Mai.
	- Tables that exceed the printable width of the page are
	  now squeezed to fit.

    BUG FIXES

	- The temporary file created for PDF output to stdout
	  was not unique.
	- The temporary file created for PDF output to stdout
	  did not use the GetTempPath() function under Windows.
	- The temporary file cleanup code did not use the
	  GetTempPath() function under Windows.
	- The prefs_load() function did not check the
	  HTMLDOC_DATA environment variable until after loading
	  the preferences file.  This could cause any saved
	  settings to generate error messages about missing
	  files (these were reloaded when the document data was
	  read, however.)
	- The first border for a table cell that spanned
	  multiple pages did not account for the cellpadding or
	  border width.
	- Leading whitespace was not eliminated in all cases.


CHANGES IN HTMLDOC v1.8.10

    NEW FEATURES

	- New "--quiet" option to suppress all messages sent to
	  stderr.